@@ -15,6 +15,7 @@ mpop_SOURCES = \
 
 mpop_LDADD = @tls_obj@	\
 	$(top_builddir)/gnulib/libgnu.a \
+	$(GETHOSTNAME_LIB)		\
 	$(GETADDRINFO_LIB) 		\
 	$(HOSTENT_LIB)			\
 	$(SERVENT_LIB)			\
